# ccusage-mqtt

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup.sh
blueprints/automation/ccusage-mqtt/: heavy-usage-alert.yaml
ccusage_mqtt/: __main__.py  anthropic_client.py  ccusage.py  credentials.py  publisher.py  state.py  usage_rate.py
docs/: design.md  index.html
docs/superpowers/plans/: 2026-05-16-ccusage-mqtt.md
docs/superpowers/specs/: 2026-05-16-ccusage-mqtt-design.md
tests/: test_anthropic_parse.py  test_anthropic_probe.py  test_ccusage_parse.py  test_ccusage_run.py  test_credentials.py  test_main_config.py  test_publisher_client.py  test_publisher_discovery.py  test_publisher_loop.py  test_state.py  test_usage_rate.py
tests/fixtures/: ccusage_active.json  ccusage_no_active.json
