[project]
name = "ccusage-mqtt"
version = "0.1.0"
description = "Publish Claude Code usage telemetry to MQTT for Home Assistant"
requires-python = ">=3.12"
dependencies = [
    "paho-mqtt>=2.1,<3",
    "requests>=2.31,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "responses>=0.25",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --tb=short"

[tool.setuptools.packages.find]
include = ["ccusage_mqtt*"]
