[project]
name = "ccusage-mqtt"
version = "0.2.0"
description = "Publish Claude Code usage telemetry to MQTT for Home Assistant"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "George Jeng" }]
keywords = ["claude", "claude-code", "mqtt", "home-assistant", "ccusage"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "paho-mqtt>=2.1,<3",
    "requests>=2.31,<3",
]

[project.urls]
Homepage = "https://github.com/george-vice/ccusage-mqtt"
Issues = "https://github.com/george-vice/ccusage-mqtt/issues"

[project.scripts]
ccusage-mqtt = "ccusage_mqtt.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "responses>=0.25",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --tb=short"

[tool.setuptools.packages.find]
include = ["ccusage_mqtt*"]
